@@ -310,6 +310,8 @@ Core and builtins
 Library
 -------
 
+- os.access now returns True on Windows for any existing directory.
+
 - Issue #1727780: Support loading pickles of random.Random objects created
   on 32-bit systems on 64-bit systems, and vice versa. As a consequence
   of the change, Random pickles created by Python 2.6 cannot be loaded
